# ragman

./: .gitignore  .vimspector.json  README.md  pyproject.toml  test.py  textprocessor.py
datasets/: short_example.txt  zshall.txt
tools/: preprocessors.py
tools/evaluation/: README.md
