[tool.poetry]
name = "ragman"
version = "0.1.0"
description = ""
authors = ["Alexander Kevin Jackson <alexanderkjackson@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
towhee = "^1.1.1"
pymilvus = "2.2.11"
pandas = "^2.0.3"
transformers = "^4.32.1"
bpython = "^0.24"
torch = {version = "^2.0.1+rocm5.4.2", python = "3.10", source = "torch-rocm"}
tqdm = "^4.66.1"
pylint = "^2.17.5"
scikit-learn = "^1.3.0"
spacy = "^3.6.1"
sentence-transformers = "^2.2.2"


[[tool.poetry.source]]
name = "torch-rocm"
url = "https://download.pytorch.org/whl/rocm5.4.2/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
